--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <section id="landing">
+        <nav class="container">
+            <div class="row">
+                <div class="nav__container--treact">
+                    <img class="logo" src="./assets/logo.svg"  alt="">
+                    Treact
+                </div>
+                <ul class="nav__links">
+                    <li><a href="#landing" class="nav__link"></a>About</li>
+                    <li><a href="#" class="nav__link"></a>Blog</li>
+                    <li><a href="#" class="nav__link"></a>Pricing</li>
+                    <li><a href="#" class="nav__link"></a>Contact Us</li>
+                    <li><a href="#" class="nav__link"></a>Login</li>
+                    <li><a href="#" class="nav__link nav__link--primary"></a>Sign Up</li>
 
+                </ul>
+            </div>
+        </nav>
+    </section>
 </body>
 </html>
