how to make a shape

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,27 @@
     <title>Treact</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
-    <section id="landing">
-        <nav class="container">
-            <div class="row">
-                <div class="nav__container--treact">
-                    <img class="logo" src="./assets/logo.svg"  alt="">
-                    Treact
-                </div>
-                <ul class="nav__links">
-                    <li><a href="#landing" class="nav__link"></a>About</li>
-                    <li><a href="#" class="nav__link"></a>Blog</li>
-                    <li><a href="#" class="nav__link"></a>Pricing</li>
-                    <li><a href="#" class="nav__link"></a>Contact Us</li>
-                    <li><a href="#" class="nav__link"></a>Login</li>
-                    <li><a href="#" class="nav__link nav__link--primary"></a>Sign Up</li>
 
-                </ul>
-            </div>
-        </nav>
-    </section>
+<body>
+    <div class="row">
+        <section id="landing">
+            <header class="container">
+                <nav class="nav__links">
+                    <img src="./assets/logo.svg" class="logo" alt="">
+                    <p class="logo__text">Treact</p>
+
+                    <div class="nav__links">
+                        <li><a href="#landing" class="nav__link"></a>About</li>
+                        <li><a href="#" class="nav__link"></a>Blog</li>
+                        <li><a href="#" class="nav__link"></a>Pricing</li>
+                        <li><a href="#" class="nav__link"></a>Contact Us</li>
+                        <li><a href="#" class="nav__link"></a>Login</li>
+                        <li><a href="#" class="nav__link nav__link--primary"></a>Sign Up</li>
+                    </div>
+                </nav>
+            </header>
+        </section>
+        </div>
 </body>
+
 </html>
