navigation bar fixed

--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
 </head>
 
 <body>
-    <div class="row">
-        <section id="landing">
-            <header class="container">
-                <nav class="nav__links">
-                    <img src="./assets/logo.svg" class="logo" alt="">
-                    <p class="logo__text">Treact</p>
+    <section id="landing">
+        <div class="row">
+            <nav class="nav__bar">
 
-                    <div class="nav__links">
-                        <li><a href="#landing" class="nav__link"></a>About</li>
-                        <li><a href="#" class="nav__link"></a>Blog</li>
-                        <li><a href="#" class="nav__link"></a>Pricing</li>
-                        <li><a href="#" class="nav__link"></a>Contact Us</li>
-                        <li><a href="#" class="nav__link"></a>Login</li>
-                        <li><a href="#" class="nav__link nav__link--primary"></a>Sign Up</li>
-                    </div>
-                </nav>
-            </header>
-        </section>
+                <a href="#" class="logo__text"> 
+                    <img class="logo" src="./assets/logo.svg" alt="">Treact
+                </a>
+
+                <ul class="nav__links">
+                    <li><a href="#landing" class="nav__link"></a>About</li>
+                    <li><a href="#" class="nav__link"></a>Blog</li>
+                    <li><a href="#" class="nav__link"></a>Pricing</li>
+                    <li><a href="#" class="nav__link"></a>Contact Us</li>
+                    <li><a href="#" class="nav__link"></a>Login</li>
+                </ul>
+
+                <button class="nav__link nav__link--primary">Sign Up</button>
+            </nav>
         </div>
+    </section>
+
 </body>
 
 </html>
