--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <section id="landing">
         <div class="row">
-            <nav class="nav__bar">
+            <nav class="nav">
 
-                <a href="#" class="logo__text"> 
+                <a href="#" class="logo__text">
                     <img class="logo" src="./assets/logo.svg" alt="">Treact
                 </a>
 
@@ -24,9 +24,9 @@
                     <li><a href="#" class="nav__link"></a>Pricing</li>
                     <li><a href="#" class="nav__link"></a>Contact Us</li>
                     <li><a href="#" class="nav__link"></a>Login</li>
-                </ul>
 
-                <button class="nav__link nav__link--primary">Sign Up</button>
+                    <button class="nav__link nav__link--primary">Sign Up</button>
+                </ul>
             </nav>
         </div>
     </section>
