header alignment done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
                     <button class="nav__link nav__link--primary">Sign Up</button>
                 </ul>
             </nav>
+
+            <div class="header__container">
+                <div class="header__columns">
+                    <div class="header__columns--left">
+                        <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
+                        <p>Our templates are easy to setup, understand and customize. Fully modular components with a
+                            variety of pages and components.</p>
+
+                        <div class="header__email">
+                            <input type="text" placeholder="Your E-mail Address">
+                            <button>Get Started</button>
+                        </div>
+
+                        <div class="header__trusted">
+                            <p>Our Trusted Customers</p>
+                            <img class="img__trusted" src="./assets/trusted.png" alt="Our Customers">
+                        </div>
+                    </div>
+
+                    <div class="header__columns--right">
+                        <div class="header__img">
+                            <img class="img__design" src="./assets/design.svg" alt="Design Illustration">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
