--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="header__container">
                 <div class="header__columns">
                     <div class="header__columns--left">
-                        <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
-                        <p>Our templates are easy to setup, understand and customize. Fully modular components with a
+                        <h1 class="header__h1">Beautiful React Templates <span class="purple">for you.</span></h1>
+                        <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular components with a
                             variety of pages and components.</p>
 
                         <div class="header__email">
                             <input type="text" placeholder="Your E-mail Address">
-                            <button>Get Started</button>
+                            <button class="button header__button">Get Started</button>
                         </div>
 
                         <div class="header__trusted">
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="header__columns--right">
-                        <div class="header__img">
+                        <div class="header__container--img">
                             <img class="img__design" src="./assets/design.svg" alt="Design Illustration">
                         </div>
                     </div>
