--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                             <img class="img__design" src="./assets/design.svg" alt="Design Illustration">
                         </div>
                     </div>
+
+                    <div></div>
                 </div>
             </div>
         </div>
