--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <div class="header__columns--right">
                         <div class="header__container--img">
-                            <img class="img__design" src="./assets/design.svg" alt="Design Illustration">
+                            <img class="img__design" src="./assets/design.svg" alt="Design Illustrations">
                         </div>
                     </div>
 
