--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treact</title>
+    <title>Treact Project</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -52,6 +52,7 @@
                             <img class="img__design" src="./assets/design.svg" alt="Design Illustration">
                         </div>
                     </div>
+
 
                     <div></div>
                 </div>
