update the button round

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <div class="header__columns--left">
                         <h1 class="header__h1">Beautiful React Templates <span class="purple">for you.</span></h1>
                         <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular components with a
-                            variety of pages and components.</p>
+                            variety of pages and components.
+                        </p>
 
                         <div class="header__email">
                             <input type="text" placeholder="Your E-mail Address">
