button color hover update

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
 
                         <div class="header__trusted">
-                            <p>Our Trusted Customers</p>
+                            <p class="txt_trusted">OUR TRUSTED CUSTOMERS</p>
                             <img class="img__trusted" src="./assets/trusted.png" alt="Our Customers">
                         </div>
                     </div>
