--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </p>
 
                         <div class="header__email">
-                            <input type="text" placeholder="Your E-mail Address">
+                            <input class="header__input" type="text" placeholder="Your E-mail Address">
                             <button class="button header__button">Get Started</button>
                         </div>
 
