--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
                             <img class="img__design" src="./assets/design.svg" alt="Design Illustration">
                         </div>
                     </div>
-
-
-                    <div></div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="features">
+        <div class="row">
+            
         </div>
     </section>
 
