edit font size and center

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
     <section id="features">
         <div class="row">
-            
+            <h1 class="features__title"><span class="purple">FEATURES</span></h1>
+            <h2 class="features__title--services">We have Amazing <span class="purple">Service.</span></h2>
         </div>
     </section>
 
