need to fix and center the features page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <div class="row">
             <h1 class="features__title"><span class="purple">FEATURES</span></h1>
             <h2 class="features__title--services">We have Amazing <span class="purple">Service.</span></h2>
+            <p class="features__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nemo optio asperiores quia vero eum aspernatur ab odit ullam nesciunt!</p>
         </div>
     </section>
 
