add features container

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <div class="header__columns">
                     <div class="header__columns--left">
                         <h1 class="header__h1">Beautiful React Templates <span class="purple">for you.</span></h1>
-                        <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular components with a
+                        <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular
+                            components with a
                             variety of pages and components.
                         </p>
 
@@ -60,9 +61,15 @@
 
     <section id="features">
         <div class="row">
-            <h1 class="features__title"><span class="purple">FEATURES</span></h1>
-            <h2 class="features__title--services">We have Amazing <span class="purple">Service.</span></h2>
-            <p class="features__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nemo optio asperiores quia vero eum aspernatur ab odit ullam nesciunt!</p>
+            <div class="features__container">
+                <h1 class="features__title"><span class="purple">FEATURES</span></h1>
+                <h2 class="features__title--services">We have Amazing <span class="purple">Service.</span></h2>
+                <p class="features__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nemo
+                    opti
+                    asperiores quia vero
+                    eum aspernatur ab odit ullam nesciunt!
+                </p>
+            </div>
         </div>
     </section>
 
