--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
                     eum aspernatur ab odit ullam nesciunt!
                 </p>
 
-                
+                <div class="features__service">
+                    <span class="imageContainer">
+                        <img src="./assets/service1.svg" alt="">
+                    </span>
+                </div>
             </div>
         </div>
     </section>
