divider, setting up/fixing margins of services

--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
                     asperiores quia vero
                     eum aspernatur ab odit ullam nesciunt!
                 </p>
+                
+                <div class="divider"></div>
 
                 <div class="features__service">
                     <span class="imageContainer">
-                        <img src="./assets/service1.svg" alt="">
+                        <img class="img__service" src="./assets/service1.svg" alt="">
                     </span>
+                    <span class="features__service--title">Secure</span>
+                    <p class="features__service--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi?x    </p>
                 </div>
             </div>
         </div>
