icon, desciption, title aligned

--- a/index.html
+++ b/index.html
@@ -64,20 +64,97 @@
             <div class="features__container">
                 <h1 class="features__title"><span class="purple">FEATURES</span></h1>
                 <h2 class="features__title--services">We have Amazing <span class="purple">Service.</span></h2>
-                <p class="features__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nemo
-                    opti
-                    asperiores quia vero
-                    eum aspernatur ab odit ullam nesciunt!
+                <p class="features__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, aliquid.
+                    Itaque labore voluptas culpa corrupti molestiae! Ullam, aut enim?
                 </p>
-                
+
                 <div class="divider"></div>
 
-                <div class="features__service">
-                    <span class="imageContainer">
-                        <img class="img__service" src="./assets/service1.svg" alt="">
-                    </span>
-                    <span class="features__service--title">Secure</span>
-                    <p class="features__service--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, animi?x    </p>
+                <div class="features__column--wrapper">
+                    <div class="features__column--services">
+                        <span class="imageContainer">
+                            <img class="img__service" src="./assets/service1.svg" alt="">
+                        </span>
+
+                        <div class="features__column--right">
+                            <span class="features__column--title">Secure</span>
+
+                            <p class="features__column--description">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Deserunt, animi?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="features__column--services">
+                        <span class="imageContainer">
+                            <img class="img__service" src="./assets/service2.svg" alt="">
+                        </span>
+
+                        <div class="features__column--right">
+                            <span class="features__column--title">24/7 Support</span>
+
+                            <p class="features__column--description">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Deserunt, animi?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="features__column--services">
+                        <span class="imageContainer">
+                            <img class="img__service" src="./assets/service3.svg" alt="">
+                        </span>
+
+                        <div class="features__column--right">
+                            <span class="features__column--title">Customizable</span>
+
+                            <p class="features__column--description">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Deserunt, animi?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="features__column--services">
+                        <span class="imageContainer">
+                            <img class="img__service" src="./assets/service4.svg" alt="">
+                        </span>
+
+                        <div class="features__column--right">
+                            <span class="features__column--title">Reliable</span>
+
+                            <p class="features__column--description">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Deserunt, animi?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="features__column--services">
+                        <span class="imageContainer">
+                            <img class="img__service" src="./assets/service5.svg" alt="">
+                        </span>
+
+                        <div class="features__column--right">
+                            <span class="features__column--title">Fast</span>
+
+                            <p class="features__column--description">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Deserunt, animi?
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="features__column--services">
+                        <span class="imageContainer">
+                            <img class="img__service" src="./assets/service6.svg" alt="">
+                        </span>
+
+                        <div class="features__column--right">
+                            <span class="features__column--title">Easy</span>
+
+                            <p class="features__column--description">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Deserunt, animi?
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
