--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <section id="features">
         <div class="row">
-            <div class="features__container">
-                <h1 class="features__title"><span class="purple">FEATURES</span></h1>
+            <div class="container features__container">
+                <h1 class="titles features__title"><span class="purple">FEATURES</span></h1>
                 <h2 class="features__title--services">We have Amazing <span class="purple">Service.</span></h2>
                 <p class="features__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, aliquid.
                     Itaque labore voluptas culpa corrupti molestiae! Ullam, aut enim?
@@ -159,6 +159,27 @@
         </div>
     </section>
 
+    <section id="quality">
+        <div class="row">
+            <div class="row__columns quality__columns">
+                <div class="row__columns--left quality__columns--left">
+                    <h1 class="titles quality__title"><span class="purple">QUALITY WORK</span></h1>
+
+                    <h2 class="headers quality__header">Designed & Developed by <span class="purple">Professionals.</span></h2>
+
+                    <p class="paragraphs quality__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam dignissimos minima earum, aut molestiae recusandae totam quia sapiente qui aliquid quod pariatur in fugiat non, id vel enim temporibus voluptatibus odit magni soluta maxime nihil.</p>
+
+                    <button class="button quality__button">Learn More</button>
+                </div>
+
+                <div class="row__columns--right quality__columns--right">
+                    <img class="img__quality" src="./assets/qualityservice.png" alt="">
+                </div>
+            </div>
+
+
+        </div>
+    </section>
 </body>
 
 </html>
