--- a/index.html
+++ b/index.html
@@ -165,9 +165,12 @@
                 <div class="row__columns--left quality__columns--left">
                     <h1 class="titles quality__title"><span class="purple">QUALITY WORK</span></h1>
 
-                    <h2 class="headers quality__header">Designed & Developed by <span class="purple">Professionals.</span></h2>
+                    <h2 class="headers quality__header">Designed & Developed by <span
+                            class="purple">Professionals.</span></h2>
 
-                    <p class="paragraphs quality__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam dignissimos minima earum, aut molestiae recusandae totam quia sapiente qui aliquid quod pariatur in fugiat non, id vel enim temporibus voluptatibus odit magni soluta maxime nihil.</p>
+                    <p class="paragraphs quality__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+                        dignissimos minima earum, aut molestiae recusandae totam quia sapiente qui aliquid quod pariatur
+                        in fugiat non, id vel enim temporibus voluptatibus odit magni soluta maxime nihil.</p>
 
                     <button class="button quality__button">Learn More</button>
                 </div>
@@ -176,8 +179,27 @@
                     <img class="img__quality" src="./assets/qualityservice.png" alt="">
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section id="steps">
+        <div class="row step__rows">
+            <div class="row__columns">
+                <div class="steps__columns--left">
+                    <img class="img__steps" src="./assets/steps.png" alt="">
+                </div>
 
+                <div class="steps__columns--right">
+                    <h1 class="titles steps__title"><span class="purple">STEPS</span></h1>
+
+                    <h2 class="headers steps__header">Easy to <span class="purple">Get Started.</span></h2>
+
+                    <div class="numbered__columns">
+                        
+                    </div>
+
+                </div>
+            </div>
         </div>
     </section>
 </body>
