fixed the columns

--- a/index.html
+++ b/index.html
@@ -183,22 +183,44 @@
     </section>
 
     <section id="steps">
-        <div class="row step__rows">
-            <div class="row__columns">
-                <div class="steps__columns--left">
-                    <img class="img__steps" src="./assets/steps.png" alt="">
-                </div>
+        <div class="step__rows">
 
-                <div class="steps__columns--right">
-                    <h1 class="titles steps__title"><span class="purple">STEPS</span></h1>
+            <div class="steps__columns--left">
+                <img class="img__steps" src="./assets/steps.png" alt="">
+            </div>
 
-                    <h2 class="headers steps__header">Easy to <span class="purple">Get Started.</span></h2>
+            <div class="steps__columns--right">
+                <h1 class="titles steps__title"><span class="purple">STEPS</span></h1>
 
-                    <div class="numbered__columns">
-                        
-                    </div>
+                <h2 class="headers steps__header">Easy to <span class="purple">Get Started.</span></h2>
 
-                </div>
+                <ul class="numbered__columns">
+
+                    <li class="numbers__container">
+                        <div class="numbered__columns--left">01</div>
+                        <div class="numbered__columns--right">
+                            <div class="numbered__title">Register</div>
+                            <p class="numbered__para">Create an account with us using Google or Facebook.</p>
+                        </div>
+                    </li>
+
+                    <li class="numbers__container">
+                        <div class="numbered__columns--left">02</div>
+                        <div class="numbered__columns--right">
+                            <div class="numbered__title">Download</div>
+                            <p class="numbered__para">Browse and Download the template that you like from the marketplace.</p>
+                        </div>
+                    </li>
+
+                    <li class="numbers__container">
+                        <div class="numbered__columns--left">03</div>
+                        <div class="numbered__columns--right">
+                            <div class="numbered__title">Run</div>
+                            <p class="numbered__para">Follow the instructions to setup and customize the template to your needs.</p>
+                        </div>
+                    </li>
+                </ul>
+
             </div>
         </div>
     </section>
