fixed the padding

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </section>
 
     <section id="steps">
-        <div class="step__rows">
+        <div class="row step__rows">
 
             <div class="steps__columns--left">
                 <img class="img__steps" src="./assets/steps.png" alt="">
