--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
             <div class="pricing__container">
                 <h1 class="titles pricing__title"><span class="purple">PRICING</span></h1>
                 <h2 class="headers pricing__header">Reasonable & Flexible <span class="purple">Plans.</span></h2>
-                <p class="paragraphs pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta quae facere voluptatibus quam ut nesciunt quia quo nisi aliquam?</p>
+                <p class="paragraphs pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
+                    quae facere voluptatibus quam ut nesciunt quia quo nisi aliquam?</p>
             </div>
         </div>
 
@@ -314,9 +315,17 @@
                 </div>
 
                 <div class="plans__container--mid personal__mid">
-                    <span class="plans__title personal__title">Personal</span>
-                    <span class="plans__title--pricing personal__pricing">$17.99</span>
-                    <span class="plans__title--monthly personal__monthly">MONTHLY</span>
+                    <div class="plans__features--container">
+                        <span class="plans__features--title personal__title">For Individuals</span>
+                        <span class="plans__features--list personal__list">30 Templates</span>
+                        <span class="plans__features--list personal__list">7 Landing Pages</span>
+                        <span class="plans__features--list personal__list">12 Internal Pages</span>
+                        <span class="plans__features--list personal__list">Basic Assistance</span>
+                    </div>
+                </div>
+
+                <div class="plans__container--btm personal__btm">
+                    <button class="button plans__button">Buy Now</button>
                 </div>
 
 
@@ -326,4 +335,5 @@
         </div>
     </section>
 </body>
+
 </html>
