plans pricing -- need to outline

--- a/index.html
+++ b/index.html
@@ -307,9 +307,10 @@
         </div>
 
         <div class="plans__container">
-            <div class="personal__container">
+            <div class="threeplans__wrapper personal__container">
+                <div class="plans__colours gradient__green"></div>
                 <div class="plans__container--top personal__top">
-                    <span class="plans__title personal__title">Personal</span>
+                    <span class="plans__title personal__title">PERSONAL</span>
                     <span class="plans__title--pricing personal__pricing">$17.99</span>
                     <span class="plans__title--monthly personal__monthly">MONTHLY</span>
                 </div>
@@ -325,12 +326,8 @@
                 </div>
 
                 <div class="plans__container--btm personal__btm">
-                    <button class="button plans__button">Buy Now</button>
+                    <button class="button plans__button">BUY NOW</button>
                 </div>
-
-
-
-
             </div>
         </div>
     </section>
