three columns rowed

--- a/index.html
+++ b/index.html
@@ -328,6 +328,52 @@
                         <button class="button plans__button">BUY NOW</button>
                     </div>
                 </div>
+                
+                <div class="threeplans__wrapper business__container">
+                    <div class="plans__colours gradient__green"></div>
+                    <div class="plans__container--top business__top">
+                        <span class="plans__title business__title">BUSINESS</span>
+                        <span class="plans__title--pricing business__pricing">$17.99</span>
+                        <span class="plans__title--monthly business__monthly">MONTHLY</span>
+                    </div>
+
+                    <div class="plans__container--mid business__mid">
+                        <div class="plans__features--container">
+                            <span class="plans__features--title business__title">For Individuals</span>
+                            <span class="plans__features--list business__list">30 Templates</span>
+                            <span class="plans__features--list business__list">7 Landing Pages</span>
+                            <span class="plans__features--list business__list">12 Internal Pages</span>
+                            <span class="plans__features--list business__list">Basic Assistance</span>
+                        </div>
+                    </div>
+
+                    <div class="plans__container--btm business__btm">
+                        <button class="button plans__button">BUY NOW</button>
+                    </div>
+                </div>
+
+                <div class="threeplans__wrapper enterprise__container">
+                    <div class="plans__colours gradient__green"></div>
+                    <div class="plans__container--top enterprise__top">
+                        <span class="plans__title enterprise__title">ENTERPRISE</span>
+                        <span class="plans__title--pricing enterprise__pricing">$17.99</span>
+                        <span class="plans__title--monthly enterprise__monthly">MONTHLY</span>
+                    </div>
+
+                    <div class="plans__container--mid enterprise__mid">
+                        <div class="plans__features--container">
+                            <span class="plans__features--title enterprise__title">For Individuals</span>
+                            <span class="plans__features--list enterprise__list">30 Templates</span>
+                            <span class="plans__features--list enterprise__list">7 Landing Pages</span>
+                            <span class="plans__features--list enterprise__list">12 Internal Pages</span>
+                            <span class="plans__features--list enterprise__list">Basic Assistance</span>
+                        </div>
+                    </div>
+
+                    <div class="plans__container--btm enterprise__btm">
+                        <button class="button plans__button">BUY NOW</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
