--- a/index.html
+++ b/index.html
@@ -297,86 +297,91 @@
     </section>
 
     <section class id="pricing">
-        <div class="row pricing__row">
-            <div class="pricing__container">
-                <h1 class="titles pricing__title"><span class="purple">PRICING</span></h1>
-                <h2 class="headers pricing__header">Reasonable & Flexible <span class="purple">Plans.</span></h2>
-                <p class="paragraphs pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
-                    quae facere voluptatibus quam ut nesciunt quia quo nisi aliquam?</p>
-            </div>
+        <div class="row">
+            <div class="row pricing__row">
 
-            <div class="plans__container">
-                <div class="threeplans__wrapper personal__container">
-                    <div class="plans__colours gradient__green"></div>
-                    <div class="plans__container--top personal__top">
-                        <span class="plans__title personal__title">PERSONAL</span>
-                        <span class="plans__title--pricing personal__pricing">$17.99</span>
-                        <span class="plans__title--monthly personal__monthly">MONTHLY</span>
-                    </div>
-
-                    <div class="plans__container--mid personal__mid">
-                        <div class="plans__features--container">
-                            <span class="plans__features--title personal__title">For Individuals</span>
-                            <span class="plans__features--list personal__list">30 Templates</span>
-                            <span class="plans__features--list personal__list">7 Landing Pages</span>
-                            <span class="plans__features--list personal__list">12 Internal Pages</span>
-                            <span class="plans__features--list personal__list">Basic Assistance</span>
-                        </div>
-                    </div>
-
-                    <div class="plans__container--btm personal__btm">
-                        <button class="button plans__button">BUY NOW</button>
-                    </div>
-                </div>
-                
-                <div class="threeplans__wrapper business__container">
-                    <div class="plans__colours gradient__green"></div>
-                    <div class="plans__container--top business__top">
-                        <span class="plans__title business__title">BUSINESS</span>
-                        <span class="plans__title--pricing business__pricing">$37.99</span>
-                        <span class="plans__title--monthly business__monthly">MONTHLY</span>
-                    </div>
-
-                    <div class="plans__container--mid business__mid">
-                        <div class="plans__features--container">
-                            <span class="plans__features--title business__title">For Small Businesses</span>
-                            <span class="plans__features--list business__list">60 Templates</span>
-                            <span class="plans__features--list business__list">15 Landing Pages</span>
-                            <span class="plans__features--list business__list">22 Internal Pages</span>
-                            <span class="plans__features--list business__list">Priority Assistance</span>
-                        </div>
-                    </div>
-
-                    <div class="plans__container--btm business__btm">
-                        <button class="button plans__button">BUY NOW</button>
-                    </div>
+                <div class="pricing__container">
+                    <h1 class="titles pricing__title"><span class="purple">PRICING</span></h1>
+                    <h2 class="headers pricing__header">Reasonable & Flexible <span class="purple">Plans.</span></h2>
+                    <p class="paragraphs pricing__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
+                        quae facere voluptatibus quam ut nesciunt quia quo nisi aliquam?</p>
                 </div>
 
-                <div class="threeplans__wrapper enterprise__container">
-                    <div class="plans__colours gradient__green"></div>
-                    <div class="plans__container--top enterprise__top">
-                        <span class="plans__title enterprise__title">ENTERPRISE</span>
-                        <span class="plans__title--pricing enterprise__pricing">$57.99</span>
-                        <span class="plans__title--monthly enterprise__monthly">MONTHLY</span>
-                    </div>
+                <div class="plans__container">
+                    <div class="threeplans__wrapper personal__container">
 
-                    <div class="plans__container--mid enterprise__mid">
-                        <div class="plans__features--container">
-                            <span class="plans__features--title enterprise__title">For Large Companies</span>
-                            <span class="plans__features--list enterprise__list">90 Templates</span>
-                            <span class="plans__features--list enterprise__list">27 Landing Pages</span>
-                            <span class="plans__features--list enterprise__list">37 Internal Pages</span>
-                            <span class="plans__features--list enterprise__list">Personal Assistance</span>
+                        <div class="plans__colours gradient__green"></div>
+                        <div class="plans__container--top personal__top">
+                            <span class="plans__title personal__title">PERSONAL</span>
+                            <span class="plans__title--pricing personal__pricing">$17.99</span>
+                            <span class="plans__title--monthly personal__monthly">MONTHLY</span>
+                        </div>
+
+                        <div class="plans__container--mid personal__mid">
+                            <div class="plans__features--container">
+                                <span class="plans__features--title personal__title">For Individuals</span>
+                                <span class="plans__features--list personal__list">30 Templates</span>
+                                <span class="plans__features--list personal__list">7 Landing Pages</span>
+                                <span class="plans__features--list personal__list">12 Internal Pages</span>
+                                <span class="plans__features--list personal__list">Basic Assistance</span>
+                            </div>
+                        </div>
+
+                        <div class="plans__container--btm personal__btm">
+                            <button class="button plans__button--first">BUY NOW</button>
                         </div>
                     </div>
 
-                    <div class="plans__container--btm enterprise__btm">
-                        <button class="button plans__button">BUY NOW</button>
+                    <div class="threeplans__wrapper business__container">
+                        <div class="plans__colours gradient__purple"></div>
+                        <div class="plans__container--top business__top">
+                            <span class="plans__title business__title">BUSINESS</span>
+                            <span class="plans__title--pricing business__pricing">$37.99</span>
+                            <span class="plans__title--monthly business__monthly">MONTHLY</span>
+                        </div>
+
+                        <div class="plans__container--mid business__mid">
+                            <div class="plans__features--container">
+                                <span class="plans__features--title business__title">For Small Businesses</span>
+                                <span class="plans__features--list business__list">60 Templates</span>
+                                <span class="plans__features--list business__list">15 Landing Pages</span>
+                                <span class="plans__features--list business__list">22 Internal Pages</span>
+                                <span class="plans__features--list business__list">Priority Assistance</span>
+                            </div>
+                        </div>
+
+                        <div class="plans__container--btm business__btm">
+                            <button class="button plans__button--mid">BUY NOW</button>
+                        </div>
+                    </div>
+
+                    <div class="threeplans__wrapper enterprise__container">
+                        <div class="plans__colours gradient__red"></div>
+                        <div class="plans__container--top enterprise__top">
+                            <span class="plans__title enterprise__title">ENTERPRISE</span>
+                            <span class="plans__title--pricing enterprise__pricing">$57.99</span>
+                            <span class="plans__title--monthly enterprise__monthly">MONTHLY</span>
+                        </div>
+
+                        <div class="plans__container--mid enterprise__mid">
+                            <div class="plans__features--container">
+                                <span class="plans__features--title enterprise__title">For Large Companies</span>
+                                <span class="plans__features--list enterprise__list">90 Templates</span>
+                                <span class="plans__features--list enterprise__list">27 Landing Pages</span>
+                                <span class="plans__features--list enterprise__list">37 Internal Pages</span>
+                                <span class="plans__features--list enterprise__list">Personal Assistance</span>
+                            </div>
+                        </div>
+
+                        <div class="plans__container--btm enterprise__btm">
+                            <button class="button plans__button--last">BUY NOW</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
 </body>
 
 </html>
