--- a/index.html
+++ b/index.html
@@ -382,6 +382,64 @@
         </div>
     </section>
 
+    <section class="Testimonials">
+        <div class="row">
+            <div class="testimonials__container">
+                <div class="testimonials__container--left">
+                    <figure class="clients__container--img"><img class="clients__img" src="/assets/love.svg" alt=""></figure>
+                </div>
+
+                <div class="testimonials__container--right">
+                    <h1 class="titles testimonials__title"><span class="purple">TESTIMONIALS</span></h1>
+                    <h2 class="headers clients__header">Our Clients <span class="purple">Love Us.</span></h2>
+                    <p class="paragraphs clients__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
+                        est incidunt alias repellat fugit asperiores quod facere, libero minus?
+                    </p>
+
+                    <div class="review__container">
+
+                        <div class="rating__container">
+                            <div class="rating__star">
+
+                            </div>
+                        </div>
+
+                        <div class="experience__container">
+                            <span title class="title review__title">Amazing User Experience</span>
+                            <p class="paragraphs review__para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit ab, nemo, suscipit exercitationem repudiandae quo facere itaque obcaecati expedita
+                                voluptatibus optio reiciendis. Voluptatibus officiis inventore unde labore. Magni,
+                                magnam quas!
+                            </p>
+                        </div>
+
+                        <div class="user__container">
+                            <div class="user__container--info">
+                                <figure><img class="user__img" src="/assets/girl.avif" alt=""></figure>
+
+                                <div class="user__name">Charlotte Hale</div>
+                                <p class="user__title">Director, Delos Inc.</p>
+                            </div>
+
+                            <div class="arrows__container">
+                                <div class="arrows__container--left">
+
+                                </div>
+                                <div class="arrows__container--right">
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
