--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
         <div class="row">
             <div class="testimonials__container">
                 <div class="testimonials__container--left">
-                    <figure class="clients__container--img"><img class="clients__img" src="/assets/love.svg" alt=""></figure>
+                    <figure class="clients__container--img"><img class="clients__img" src="/assets/love.svg" alt="">
+                    </figure>
                 </div>
 
                 <div class="testimonials__container--right">
@@ -405,7 +406,7 @@
                         </div>
 
                         <div class="experience__container">
-                            <span title class="title review__title">Amazing User Experience</span>
+                            <span title class="review__title">Amazing User Experience</span>
                             <p class="paragraphs review__para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Sit ab, nemo, suscipit exercitationem repudiandae quo facere itaque obcaecati expedita
                                 voluptatibus optio reiciendis. Voluptatibus officiis inventore unde labore. Magni,
@@ -414,9 +415,9 @@
                         </div>
 
                         <div class="user__container">
-                            <div class="user__container--info">
-                                <figure><img class="user__img" src="/assets/girl.avif" alt=""></figure>
+                            <figure><img class="user__img" src="/assets/girl.avif" alt=""></figure>
 
+                            <div class="user__container--info">
                                 <div class="user__name">Charlotte Hale</div>
                                 <p class="user__title">Director, Delos Inc.</p>
                             </div>
