developer comments added

--- a/index.html
+++ b/index.html
@@ -492,7 +492,11 @@
 
     <section class="contact">
         <div class="row developer__row">
-            
+            Developers all over the world are happily using Treact.
+
+            // Get started button 
+
+            // Contact us button 
         </div>
     </section>
 </body>
