--- a/index.html
+++ b/index.html
@@ -479,6 +479,25 @@
 
                     </div>
                     
+                    <div class="accordion">
+                        <div class="contentBx">
+                            <div class="label">List One</div>
+                            <div class="content">
+                                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum magni eaque sunt a adipisci voluptates consequatur dolor voluptate exercitationem. Rem natus adipisci porro iure sunt. </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <script>
+                        const accordion = document.getElementsByClassName('contentBx');
+
+                        for (i = 0; i<accordion.length; i++) {
+                            accordion[i].addEventListener('click', function(){
+                                this.classList.toggle('active')
+                            })
+                        }
+                    </script>
+
                     <div class="questions__container--right">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
                     </div>
