--- a/index.html
+++ b/index.html
@@ -475,13 +475,13 @@
                 <div class="faqs__container--btm">
 
                     <div class="questions__container--left">
-                        <dt class="questions__desc">Are all the templates easily customizable?</dt>
+                        <dt class="questions__desc"></dt>
 
                     </div>
                     
                     <div class="accordion">
                         <div class="contentBx">
-                            <div class="label">List One</div>
+                            <div class="label">Are all the templates easily customizable?</div>
                             <div class="content">
                                 <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum magni eaque sunt a adipisci voluptates consequatur dolor voluptate exercitationem. Rem natus adipisci porro iure sunt. </p>
                             </div>
