--- a/index.html
+++ b/index.html
@@ -609,6 +609,71 @@
             </div>
         </div>
     </section>
+
+    <section class="footer">
+        <div class="footer__row">
+            <div class="footer__container">
+                <div class="footer__links--container">
+                    <div class="footer__title">MAIN</div>
+                    <div class="footer__links">
+                        <li class="footer__link--list"><a class="footer__link" href="">Blog</a></li>
+                        <li class="footer__link--list"><a class=" footer__link" href="">FAQs</a></li>
+                        <li class="footer__link--list"> <a class="footer__link" href="">Support</a></li>
+                        <li class="footer__link--list"><a class=" footer__link"x1 href="">About Us</a></li>
+                    </div>
+                </div>
+
+                <div class="footer__links--container">
+                    <div class="footer__title">PRODUCT</div>
+                    <div class="footer__links">
+                        <li class="footer__link--list"><a class="footer__link" href="">Log In</a></li>
+                        <li class="footer__link--list"><a class=" footer__link" href="">Personal</a></li>
+                        <li class="footer__link--list"> <a class="footer__link" href="">Business</a></li>
+                        <li class="footer__link--list"><a class=" footer__link"x1 href="">Team</a></li>
+                    </div>
+                </div>
+
+                <div class="footer__links--container">
+                    <div class="footer__title">PRESS</div>
+                    <div class="footer__links">
+                        <li class="footer__link--list"><a class="footer__link" href="">Logos</a></li>
+                        <li class="footer__link--list"><a class=" footer__link" href="">Events</a></li>
+                        <li class="footer__link--list"> <a class="footer__link" href="">Stories</a></li>
+                        <li class="footer__link--list"><a class=" footer__link"x1 href="">Office</a></li>
+                    </div>
+                </div>
+                <div class="footer__links--container">
+                    <div class="footer__title">TEAM</div>
+                    <div class="footer__links">
+                        <li class="footer__link--list"><a class="footer__link" href="">Career</a></li>
+                        <li class="footer__link--list"><a class=" footer__link" href="">Founders</a></li>
+                        <li class="footer__link--list"> <a class="footer__link" href="">Culture</a></li>
+                        <li class="footer__link--list"><a class=" footer__link"x1 href="">Onboarding</a></li>
+                    </div>
+                </div>
+                <div class="footer__links--container">
+                    <div class="footer__title">LEGAL</div>
+                    <div class="footer__links">
+                        <li class="footer__link--list"><a class="footer__link" href="">GDPR</a></li>
+                        <li class="footer__link--list"><a class=" footer__link" href="">Privacy Policy</a></li>
+                        <li class="footer__link--list"> <a class="footer__link" href="">Terms of Service</a></li>
+                        <li class="footer__link--list"><a class=" footer__link"x1 href="">Disclaimer</a></li>
+                    </div>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="footer__btm">
+                <div class="footer__btm--link">
+                    <a class="nav__logo--link" href="#landing">
+                        <img class="logo" src="./assets/logo.svg" alt="logo">
+                        Treact
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
