--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <div class="row">
             <nav class="nav">
 
-                <a href="#" class="logo__text">
+                <a href="" class="logo__text">
                     <img class="logo" src="./assets/logo.svg" alt="">Treact
                 </a>
 
                 <ul class="nav__links">
-                    <li><a href="#landing" class="nav__link"></a>About</li>
-                    <li><a href="#" class="nav__link"></a>Blog</li>
-                    <li><a href="#" class="nav__link"></a>Pricing</li>
-                    <li><a href="#" class="nav__link"></a>Contact Us</li>
-                    <li><a href="#" class="nav__link"></a>Login</li>
+                    <li><a href="" class="nav__link">About</a></li>
+                    <li><a href="" class="nav__link">Blog</a></li>
+                    <li><a href="" class="nav__link">Pricing</a></li>
+                    <li><a href="" class="nav__link">Contact Us</a></li>
+                    <li><a href="" class="nav__link">Login</a></li>
 
                     <button class="nav__link nav__link--primary">Sign Up</button>
                 </ul>
@@ -631,7 +631,7 @@
                             <li class="footer__link--list"><a class="footer__link" href="">Log In</a></li>
                             <li class="footer__link--list"><a class=" footer__link" href="">Personal</a></li>
                             <li class="footer__link--list"> <a class="footer__link" href="">Business</a></li>
-                            <li class="footer__link--list"><a class=" footer__link" x1 href="">Team</a></li>
+                            <li class="footer__link--list"><a class=" footer__link" href="">Team</a></li>
                         </div>
                     </div>
 
@@ -641,7 +641,7 @@
                             <li class="footer__link--list"><a class="footer__link" href="">Logos</a></li>
                             <li class="footer__link--list"><a class=" footer__link" href="">Events</a></li>
                             <li class="footer__link--list"> <a class="footer__link" href="">Stories</a></li>
-                            <li class="footer__link--list"><a class=" footer__link" x1 href="">Office</a></li>
+                            <li class="footer__link--list"><a class=" footer__link" href="">Office</a></li>
                         </div>
                     </div>
 
@@ -651,7 +651,7 @@
                             <li class="footer__link--list"><a class="footer__link" href="">Career</a></li>
                             <li class="footer__link--list"><a class=" footer__link" href="">Founders</a></li>
                             <li class="footer__link--list"> <a class="footer__link" href="">Culture</a></li>
-                            <li class="footer__link--list"><a class=" footer__link" x1 href="">Onboarding</a></li>
+                            <li class="footer__link--list"><a class=" footer__link" href="">Onboarding</a></li>
                         </div>
                     </div>
 
@@ -661,7 +661,7 @@
                             <li class="footer__link--list"><a class="footer__link" href="">GDPR</a></li>
                             <li class="footer__link--list"><a class=" footer__link" href="">Privacy Policy</a></li>
                             <li class="footer__link--list"> <a class="footer__link" href="">Terms of Service</a></li>
-                            <li class="footer__link--list"><a class=" footer__link" x1 href="">Disclaimer</a></li>
+                            <li class="footer__link--list"><a class=" footer__link" href="">Disclaimer</a></li>
                         </div>
                     </div>
 
