added hamburger menu / need button to show

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                     <img class="logo" src="./assets/logo.svg" alt="">Treact
                 </a>
 
+                <button class="hamburger" id="hamburger">
+                    <i class="fas fa-bars"></i>
+                </button>
+                
                 <ul class="nav__links">
                     <li><a href="" class="nav__link">About</a></li>
                     <li><a href="" class="nav__link">Blog</a></li>
