--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treact Project</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -18,7 +20,7 @@
                     <img class="logo" src="./assets/logo.svg" alt="">Treact
                 </a>
 
-                <button class="hamburger" id="hamburger">
+                <button class="hamburger">
                     <i class="fas fa-bars"></i>
                 </button>
                 
@@ -29,7 +31,7 @@
                     <li><a href="" class="nav__link">Contact Us</a></li>
                     <li><a href="" class="nav__link">Login</a></li>
 
-                    <button class="nav__link nav__link--primary">Sign Up</button>
+                    <button class="button nav__link nav__link--primary">Sign Up</button>
                 </ul>
             </nav>
 
@@ -604,7 +606,7 @@
                     </div>
 
                     <div class="developer__container--right">
-                        <a href="#landing">
+                        <a href="">
                             <button class="button getstarted__btn">Get Started</button>
                         </a>
                         <button class="button contact__btn" href="">Contact Us</button>
